cmake_minimum_required(VERSION 3.10)
#set( CMake_BUILD_TYPE "Debug")
set( CMake_BUILD_TYPE "Release")
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
project(3DNR_OF)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})	#添加OpenCV头文件
#AUX_SOURCE_DIRECTORY(SOURCE DIR_SOURCE)
FIND_PACKAGE(OpenMP REQUIRED)
if(OPENMP_FOUND)
    message("OPENMP FOUND")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
include_directories(Heads)
#add_executable(${ect_NAME} ${DIR_SOURCE})
set(SOURCE_FILES main.cpp display_flow.cpp display_flow.h optical_flow_related.cpp optical_flow_related.h Spatial_Temperal_Denoise.cpp Spatial_Temperal_Denoise.h svd_decomposition.cpp svd_decomposition.h PCADenoise.cpp PCADenoise.h)
add_executable(3DNR_OF ${SOURCE_FILES})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})	#链接OpenCV库文件到cmake项目上
